# secure-endpoint-ebpf

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: CONTRIBUTING.md  SECURITY.md
include/bpf/: common.h  file.h  network.h  process.h
src/: CMakeLists.txt  SeEbpfFileProcProgram.c  SeEbpfNetworkMonitorProgram.c
src/bcc/: CMakeLists.txt  SeEbpfFileProcProgram.c  SeEbpfNetworkMonitorProgram.c
src/bpf/: CMakeLists.txt  defines.h  events.h  file_access_util.h  file_common_util.h  file_id.h  file_path_util.h  file_util.h  host_namespace_map.h  mount_include_map.h  network_util.h  pid_exclusion_map.h  process_util.h  socket_cache.h  vmlinux_custom.h
src/bpf/arm64/: vmlinux.h
src/bpf/network-control/: tc_classifier.c
src/bpf/probes/: file_close_write.c  file_create.c  file_delete.c  file_read.c  file_rename.c  file_write.c  kernel_features.c  network_accept.c  network_connect.c  network_listen.c  network_receive.c  network_release.c  network_send.c  process_exec.c  process_exit.c  process_fork.c
src/bpf/x86/: vmlinux.h
